--- a/news.html
+++ b/news.html
@@ -38,16 +38,21 @@
         <br><br><br>
       
       <p>
-        In an unexpected turn of events, concerns over safety near the world-renowned Wonka’s Chocolate Factory have prompted nearby citizens to report a flying elevator emerging from the factory's roof. The incident occurred late yesterday afternoon, causing a stir among the local community.
+      On the bright, winter morning, a large, glass cube shot out of Mr Wonka's chocolate factory through the sky <br><br>br><br>
+      Deafening crashes could be heard from the factory as a giant hole was later seen on the roof of it. The floating object was later identified
+        as a transparent elevator, owned by Wonka himself. <br><br>br><br>
 
-Eyewitnesses described the scene as surreal. <br><br><br>"I couldn't believe my eyes," said Eva, a reader of the elevator story. "One moment, everything was normal, and the next, there was this elevator flying out of the factory roof and soaring into the sky."
+      "One moment, everything was normal, and another moment, there was this elevator flying and soaring into the sky" says Eva. 
+      Willy Wonka has not given any explanation, and instead was later seen smashing through the roof of Charlie Bucket's 
+        small house. <br><br>br><br>
 
-The flying elevator, reportedly part of the factory's eccentric and secretive operations, has raised significant safety concerns among residents. "It's not just about road safety anymore," said Eva. "If things like flying elevators are going to be a regular occurrence, we need to know that the factory is taking all necessary precautions to ensure public safety."<br><br><br>
+        Although many see the invention of a flying power like this as a momentous occassion, citizens seemed concerned. 
+        "Oh My God! Why does my favourite chocolate factory have an elevator flying out of it? Isn't this a safety hazard ?!"
+        said Otto, a 13 year old boy. <br><br>br><br>
 
-Wonka’s Chocolate Factory, famous for its whimsical and innovative approach to confectionery, has yet to issue an official statement regarding the incident. However, many people reading the news are in shock. “Oh My God! Why does my favourite chocolate factory have an elevator flying out of it? Isn’t this a safety hazard?!” says Otto, a 13 year old boy. <br><br><br>
-
-The incident has added a new layer of urgency to the ongoing discussions about safety in the area. Wonka can and may be charged with violation of the sweepstakes law, assault of minors, and the violation of the WHS Act. Readers are now calling for a comprehensive review of all potential hazards, both on the ground and in the air, to ensure the well-being of the community near Wonka’s chocolate factory. 
-
+        Wonka is now susceptible to being charged with violation of the sweepstakes law, assult of minors, and the violation
+        of the WHS Act. Fans can only hope that Wonka can do something to save himself, but the in the words of Eva, "
+        It won't be a piece of cake." 
         
       </p>
     </section>
