--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
         small house. 
         <br><br>br>
       </p>
-<img src="flyingelevator.jpg">
+<img src="flyingelevator.jpg" style="align-items:center;">
 
       
    <br><br>br>
