--- a/news.html
+++ b/news.html
@@ -38,7 +38,7 @@
         <br><br><br>
       
       <p>
-      On the bright, winter morning, a large, glass cube shot out of Mr Wonka's chocolate factory through the sky <br><br>br><br>
+      On the bright, winter morning, a large, glass cube shot out of Mr Wonka's chocolate factory through the sky <br><br><br>
       Deafening crashes could be heard from the factory as a giant hole was later seen on the roof of it. The floating object was later identified
         as a transparent elevator, owned by Wonka himself. 
         <br><br>
@@ -54,7 +54,7 @@
    <br><br>
 <p> Although many see the invention of a flying power like this as a momentous occassion, citizens seemed concerned. 
         "Oh My God! Why does my favourite chocolate factory have an elevator flying out of it? Isn't this a safety hazard ?!"
-        said Otto, a 13 year old boy. <br><br>br><br>
+        said Otto, a 13 year old boy. <br><br><br>
 
         Wonka is now susceptible to being charged with violation of the sweepstakes law, assult of minors, and the violation
         of the WHS Act. Fans can only hope that Wonka can do something to save himself, but the in the words of Eva, "
