--- a/news.html
+++ b/news.html
@@ -66,7 +66,8 @@
 
 
   <p>
- 
+   Link To Fake News Article: 
+    https://www.canva.com/design/DAGP8WgldUY/ScHnSg7kLzJAM0kxEQuXNQ/edit?utm_content=DAGP8WgldUY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton
   </p>
 
     
