--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
         small house. 
         <br><br>
       </p>
-<img src="flyingelevator.jpg" style="align-items:center; left=:25%;">
+<img src="flyingelevator.jpg" style="margin:auto;">
 
       
    <br><br>
