--- a/news.html
+++ b/news.html
@@ -66,8 +66,11 @@
 
 
   <p><br><br><br><br>
-   Link To Fake News Article: 
-    https://www.canva.com/design/DAGP8WgldUY/ScHnSg7kLzJAM0kxEQuXNQ/edit?utm_content=DAGP8WgldUY&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton
+   
+    <strong>More Related News Is Less Than A Click Away! :</strong>
+   <a href="/images/myw3schoolsimage.jpg" download>
+  CLICK HERE FOR MORE FLYING ELEVATOR NEWS(fake)
+</a>
   </p>
 
     
