--- a/news.html
+++ b/news.html
@@ -68,7 +68,7 @@
   <p><br><br><br><br>
    
     <strong>More Related News Is Less Than A Click Away! :</strong>
-   <a href="/images/myw3schoolsimage.jpg" download>
+   <a href="fakenews.png" download>
   CLICK HERE FOR MORE FLYING ELEVATOR NEWS(fake)
 </a>
   </p>
