--- a/news.html
+++ b/news.html
@@ -67,7 +67,7 @@
 
   <p><br><br><br><br>
    
-    <strong>More Related News Is Less Than A Click Away! :</strong>
+    <strong>More Related News Is Less Than A Click Away! :</strong><br><br>
    <a href="fakenews.png" download>
   CLICK HERE FOR MORE FLYING ELEVATOR NEWS(fake)
 </a>
