--- a/news.html
+++ b/news.html
@@ -38,13 +38,13 @@
         <br><br><br>
       
       <p>
-      On the bright, winter morning, a large, glass cube shot out of Mr Wonka's chocolate factory through the sky <br><br><br>
+      On the bright, winter morning, a large, glass cube shot out of Mr Wonka's chocolate factory through the sky. <br><br><br>
       Deafening crashes could be heard from the factory as a giant hole was later seen on the roof of it. The floating object was later identified
         as a transparent elevator, owned by Wonka himself. 
         <br><br>
 
       "One moment, everything was normal, and another moment, there was this elevator flying and soaring into the sky" says Eva. 
-      Willy Wonka has not given any explanation, and instead was later seen smashing through the roof of Charlie Bucket's 
+      Willy Wonka has not given any explanation, and instead was later seen smashing through the roof of Charlie Bucket's
         small house. 
         <br><br>
       </p>
