--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
         small house. 
         <br><br>
       </p>
-<img src="flyingelevator.jpg" style="margin:auto;">
+<img src="flyingelevator.jpg" >
 
       
    <br><br>
