--- a/news.html
+++ b/news.html
@@ -52,7 +52,7 @@
 
       
    <br><br>
-<p> Although many see the invention of a flying power like this as a momentous occassion, citizens seemed concerned. 
+<p> Although many see the invention of a flying power like this as a momentous occassion, people seemed concerned. 
         "Oh My God! Why does my favourite chocolate factory have an elevator flying out of it? Isn't this a safety hazard ?!"
         said Otto, a 13 year old boy. <br><br><br>
 
