--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
         small house. 
         <br><br>
       </p>
-<center><img src="flyingelevator.jpg" class="fakenewspic"></center>
+<center><img src="flyingelevator.jpg" class="flyingelevatorimg"></center>
 
       
    <br><br>
